# scaling-potato

./: .gitignore  README.md  index.html
apache-conf/: mpri.puyral.ml.conf  update-apache.sh
html/: functions.js  index.html  main.js  styles.css  test.html
html/assets/: functions.js  main.js
rocket/: Cargo.toml  README.md  Rocket.toml
rocket/src/: api.rs  categories.rs  main.rs  result.rs
rocket/src/categories/: category.rs  link.rs  page.rs
rocket/src/categories/category/: category_hash.rs
wikipedia-db/: README.md  enwiki-latest-category.sql.gz-rss.xml  make_makefile.sh
wikipedia-db/Rust/: README.md
wikipedia-db/Rust/preprocessor/: Cargo.toml
wikipedia-db/Rust/preprocessor/src/: algebra.rs  cli.rs  lib.rs  main.rs  sql_extracts.rs  tests.rs
wikipedia-db/Rust/preprocessor/src/algebra/: lib.rs  page_rank.rs  tests.rs
wikipedia-db/Rust/preprocessor/src/sql_extracts/: categories.rs  category.rs  extractor.rs  tests.rs
wikipedia-db/Rust/preprocessor/src/sql_extracts/categories/: category.rs  category_category_vec.rs  category_links.rs  page_category_links.rs  tests.rs
wikipedia-db/Rust/preprocessor/src/sql_extracts/categories/category/: category_hash.rs
wikipedia-db/Rust/preprocessor/src/sql_extracts/categories/category_links/: category_links_hash.rs
wikipedia-db/Rust/preprocessor/test_samples/: one_line_categories  one_line_categorieslinks
wikipedia-db/Rust/preprocessor/tests/: eo.rs
wikipedia-db/en/: enwiki-latest-categorylinks.sql.gz-rss.xml  enwiki-latest-page.sql.gz-rss.xml  enwiki-latest-pagelinks.sql.gz-rss.xml
wikipedia-db/eo/: README.md  data.yml  eowiki-latest-category.sql.gz-rss.xml  eowiki-latest-page.sql.gz-rss.xml  eowiki-latest-pagelinks.sql.gz-rss.xml  script.pl
