[package]
name = "rocket"
version = "0.2.0"
authors = ["simony2222 <7871851+simony2222@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
# rusqlite = "0.24.2"
#lazy_static = "1.4.0"
tailcall = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#try_opt = "0.2.0"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json", "sqlite_pool", "tera_templates"]