[package]
name = "preprocessor"
version = "0.1.2"
authors = ["simony2222 <7871851+simony2222@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
sprs = "0.9.3" # sparse matrix
rayon = "1.5" # parralel
ordered-float = "2.0"
num-traits = "0.2"